--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Upload your Unemployable (or whatever photo you like) to the assets/images folder
       and change the name of the image below to match the uploaded one
 
-      Change the title in the <title> tag to whatever you would like the title of your portfolio to be
+      Change the title in the <title> tag to whatever you would like the title of your portfolio to be -
 
       This should be the same across all pages.
      -->
@@ -28,9 +28,9 @@
     <!-- NAVBAR -->
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
-        <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
+        <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left --> -
         <span class="nav-title">Jaren Urey Portfolio</span>
-         <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
+         <!-- TODO - Change the email after 'mailto:' to your email address for contact --> -
         <a class="button" href="mailto:ureyjaren@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
@@ -48,25 +48,25 @@
 
             - Change the img "src" attribute to point to the Unemployable image you uploaded (or whatever image).
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
-            - If you aren't using an Unemployable as your image, remove the entire "a" element
+            - If you aren't using an Unemployable as your image, remove the entire "a" element -
           -->
           <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
+          <!--<a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">-->
+            <span class="image-caption">Jaren Urey</span>
           </a>
         </div>
 
           <!-- 
             TODO
 
-            - Change the main-title to whatver you want
-            - Change the body-text after that to a quick introduction to what you do
+            - Change the main-title to whatver you want -
+            - Change the body-text after that to a quick introduction to what you do -
             - Edit the button text if you feel like it. It will link to the projects section below.
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm @ndoherty_eth.</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <span class="main-title">Hey, I'm Jaren Urey.</span>
+              <div class="body-text">I’m a game developer student with a strong proficency with C++, C#, and engine programming.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
