--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm Jaren Urey.</span>
-              <div class="body-text">I’m a game developer student with a strong proficency with C++, C#, and engine programming.</div>
+              <div class="body-text">I’m a game development student with a passion for creating immersive gameplay systems and AI-driven interactions in Unreal Engine and Unity.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -85,8 +85,8 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">I'm currently working on expanding my game projects while finishing my Game Development degree at Full Sail University, with the goal of becoming a gameplay or AI programmer in the game industry. My work focuses on C++/C# gameplay programming, player systems, and AI logic. I also have experience designing inventory systems and network prototype.</div>
+          <div class="body-text">I love the challenge of building systems that make game feel alive. From dynamic AI behaviors to seamless player interactions. I'm especially interested in technical design and gameplay programming that blend creativity with solid engineering. When I'm not coding, I enjoy exploring level design ideas in indie games and analyzing how UI shapes game expeeriences.</div>
         </div>
       </div>
 
