--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
           <div class="body-text">I'm currently working on expanding my game projects while finishing my Game Development degree at Full Sail University, with the goal of becoming a gameplay or AI programmer in the game industry. My work focuses on C++/C# gameplay programming, player systems, and AI logic. I also have experience designing inventory systems and network prototype.</div>
-          <div class="body-text">I love the challenge of building systems that make game feel alive. From dynamic AI behaviors to seamless player interactions. I'm especially interested in technical design and gameplay programming that blend creativity with solid engineering. When I'm not coding, I enjoy exploring level design ideas in indie games and analyzing how UI shapes game expeeriences.</div>
+          <div class="body-text">I love the challenge of building systems that make game feel alive. From dynamic AI behaviors to seamless player interactions. I'm especially interested in technical design and gameplay programming that blend creativity with solid engineering. When I'm not coding, I enjoy exploring level design ideas in indie games and analyzing how UI shapes game experiences.</div>
         </div>
       </div>
 
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
-        <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
+        <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say --> -
         <span class="subheader-text">My Work / My Projects</span>
 
         <div class="projects-container">
