--- a/project-pages/NRFTW-project.html
+++ b/project-pages/NRFTW-project.html
@@ -25,8 +25,8 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/1311.png" />
-     <title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+     <title>No Rest For The Wicked</title>
+    <meta name="description" content="No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them..">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
