--- a/project-pages/NRFTW-project.html
+++ b/project-pages/NRFTW-project.html
@@ -26,7 +26,7 @@
      -->
      <link rel="icon" href="../assets/images/1311.png" />
      <title>No Rest For The Wicked</title>
-    <meta name="description" content="No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them..">
+    <meta name="description" content="No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
@@ -44,7 +44,7 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">No Rest For The Wicked</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
@@ -69,7 +69,7 @@
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
         <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="body-text">No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
 
