--- a/project-pages/NRFTW-project.html
+++ b/project-pages/NRFTW-project.html
@@ -50,7 +50,7 @@
         
           (this should be the same across all pages)
         -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:ureyjaren@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -64,8 +64,8 @@
           <!-- 
             TODO
 
-            - Change the 'main-title' text to the name of your project
-            - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
+            - Change the 'main-title' text to the name of your project -
+            - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card) -
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
         <div class="main-title">Project Name</div>
@@ -83,7 +83,7 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
+          <div class="body-text">The initial idea for the game came from my previous work on developing a enemy possession system for Soverign. I thought about what other concepts that I could include such a feature, which I eventually landed on the idea of the player playing as a ghost. The rest of the game was brainstormed by the rest of my development team: Mason Miller, Vijay Messan, Tim Kim, and Alia Kunow. The project was initially created for one of our portolfio classes in university, and so the scope of development was only supposed to be one month to make a simple demo. Luckily we all agreed to continue development into our capstone classes, which will allow for futher development for a full fledged game, which is what we are doing now.</div>
           <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
         </div>
       </div>
