--- a/project-pages/NRFTW-project.html
+++ b/project-pages/NRFTW-project.html
@@ -44,7 +44,7 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">No Rest For The Wicked</span>
+        <span class="nav-title">Jaren Urey - No Rest For The Wicked</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
@@ -68,7 +68,7 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card) -
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
+        <div class="main-title">No Rest For The Wicked</div>
         <div class="body-text">No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
