--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">No Rest For The Wicked</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Role: Lead Designer, Developer</div>
+			  <div class="body-text project-card-text">Team: Jaren Urey, Mason Miller, Vijay Messan, Tim Kim, and Alia Kunow</div>
+			  <div class="body-text project-card-text">Project Length: 3 months</div>
+			  <div class="body-text project-card-text">Engine: Unreal</div>
             </div>
             <a class="button" href="./project-pages/NRFTW-project.html">
               <span class="button-text">Read More</span>
