--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             <div class="project-card-text-container">
               <div class="subheader-text project-title">No Rest For The Wicked</div>
               <div class="body-text project-card-text">Role: Lead Designer, Developer</div>
+			  <div class="body-text project-card-text">No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.</div>
 			  <div class="body-text project-card-text">Team: Jaren Urey, Mason Miller, Vijay Messan, Tim Kim, and Alia Kunow</div>
 			  <div class="body-text project-card-text">Project Length: 3 months</div>
 			  <div class="body-text project-card-text">Engine: Unreal</div>
