--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="subheader-text project-title">No Rest For The Wicked</div>
               <div class="body-text project-card-text">Role: Lead Designer, Developer</div>
 			  <div class="body-text project-card-text">No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.</div>
-			  <div class="body-text project-card-text">Team: Jaren Urey, Mason Miller, Vijay Messan, Tim Kim, and Alia Kunow</div>
+			  <div class="body-text project-card-text">Team: Jaren Urey, Mason Miller, Vijay Messan, Tim Kim, Alia Kunow</div>
 			  <div class="body-text project-card-text">Project Length: 3 months</div>
 			  <div class="body-text project-card-text">Engine: Unreal</div>
             </div>
@@ -136,10 +136,14 @@
           <div class="project-card">
             <img src="./assets/images/code.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">Sovereign</div>
+				 <div class="body-text project-card-text">Role: Head Developer</div>
+              <div class="body-text project-card-text">In Sovereign, the protagonist has been trapped within a virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.</div>
+			  <div class="body-text project-card-text">Team: Peter Smith, Jaren Urey</div>
+			  <div class="body-text project-card-text">Project Length: +15 months</div>
+			  <div class="body-text project-card-text">Engine: Unreal</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/Sovereign-project.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
