--- a/project-pages/Sovereign-project.html
+++ b/project-pages/Sovereign-project.html
@@ -25,8 +25,8 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/1311.png" />
-     <title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+     <title>Sovereign</title>
+    <meta name="description" content="In Sovereign, the Protagonist has been trapped within a Virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
@@ -44,13 +44,13 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Jaren Urey - Sovereign</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
           (this should be the same across all pages)
         -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:ureyjaren@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -68,8 +68,8 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="main-title">Sovereign</div>
+        <div class="body-text">Sovereign is a third-person adventure melee shooter, where the Protagonist has been trapped within a Virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
 
@@ -83,8 +83,11 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">I was the inital developer that Peter contacted to bring this project to life. We had a few other developers some and go, but for the majority of the project it was just me.</div>
+		  <div class="body-text">Peter Smith had been working on the idea of Sovereign for years. Initially he was going to adapt the story into either a movie or a graphic novel, before he settled on wanting to adapt it into a game. He serves has the story writer and lead desginer for Sovereign.</div>
+		  <div class="body-text">With being the only main developer, I was in charge of implementing almost every feature that needed to be implemented. I did all of the player functionality and combat abilities, designed the inventory system, enemy AI, an enemy possession system.</div>
+          <div class="body-text">Being a really small team and having a lot of responsibilities did help broaden my techincal skills that I otherwise would not have had to learn. Which I think grants a nice perspective of what it all takes to build a game, that otherwise a developer in a specailized role would not have had.</div>
+		  <div class="body-text">As of right now, our main goal is to get a presentable product to show to producers by the end of the year. Once I finish up college and hopefully get funding for the game, we will be moving into fullscale development with bringing this project to life.</div>
         </div>
       </div>
 
