--- a/index.html
+++ b/index.html
@@ -151,10 +151,13 @@
           <div class="project-card">
             <img src="./assets/images/sketchbook.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Super Long Project Name That Should be Hidden</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">Chat Server Prototype</div>
+			  <div class="body-text project-card-text">Role: Sole Developer</div>
+              <div class="body-text project-card-text">A simple chat server prototype that could send and receive messages via a TCP connection.</div>
+			  <div class="body-text project-card-text">Project Length: 1 month</div>
+			  <div class="body-text project-card-text">Engine: C++</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/ChatServer-project.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
