--- a/project-pages/ChatServer-project.html
+++ b/project-pages/ChatServer-project.html
@@ -25,8 +25,8 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/1311.png" />
-     <title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+     <title>Chat Server Prototype</title>
+    <meta name="description" content="A simple chat server prototype that could send and receive messages via a TCP connection.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
@@ -44,13 +44,13 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Jaren Urey - Chat Server Prototype</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
           (this should be the same across all pages)
         -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:ureyjaren@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -68,8 +68,8 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="main-title">Chat Server Prototype</div>
+        <div class="body-text">A simple chat server prototype that could send and receive messages via a TCP connection.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
 
@@ -83,8 +83,11 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">A lightweight client-server chat system built in c++ using the WinSock API. The project demonstrates networking fundamentals, multithreading, and secure user management through a modular design.</div>
+          <div class="body-text">Server Component:</div>
+		  <div class="body-text">- Manages client connections, authentication, and active sessions.</div>
+		  <div class="body-text">- Uses unordered_map and mutex locks for thread-safe handling of user registries and active socket communication.</div>
+		  <div class="body-text">- Maintains detailed logs for user commands and public chat messages.</div>
         </div>
       </div>
 
