--- a/project-pages/ChatServer-project.html
+++ b/project-pages/ChatServer-project.html
@@ -88,6 +88,13 @@
 		  <div class="body-text">- Manages client connections, authentication, and active sessions.</div>
 		  <div class="body-text">- Uses unordered_map and mutex locks for thread-safe handling of user registries and active socket communication.</div>
 		  <div class="body-text">- Maintains detailed logs for user commands and public chat messages.</div>
+		  <div class="body-text">Client Component:</div>
+		  <div class="body-text">- Handles user registration, login flow, and state management through a structured ClientState enum.</div>
+		  <div class="body-text">- Uses socket-based communication with synchronization mechanisms to ensure safe concurrent operations.</div>
+		  <div class="body-text">Features:</div>
+		  <div class="body-text">- Basic authentication and credential storage.</div>
+		  <div class="body-text">- Real-time text message exchange between clients via the server.</div>
+		  <div class="body-text">- Logging system for both server commands and public messages.</div>
         </div>
       </div>
 
