--- a/index.html
+++ b/index.html
@@ -162,6 +162,21 @@
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+		  <div class="project-card">
+            <img src="./assets/images/code.jpeg" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Sovereign</div>
+				 <div class="body-text project-card-text">Role: Head Developer</div>
+              <div class="body-text project-card-text">In Sovereign, the protagonist has been trapped within a virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.</div>
+			  <div class="body-text project-card-text">Team: Peter Smith, Jaren Urey</div>
+			  <div class="body-text project-card-text">Project Length: +15 months</div>
+			  <div class="body-text project-card-text">Engine: Unreal</div>
+            </div>
+            <a class="button" href="./project-pages/Sovereign-project.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
         </div>
       </div>
     </div>
