--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
 		  <div class="project-card">
             <img src="./assets/images/code.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Sovereign</div>
-				 <div class="body-text project-card-text">Role: Head Developer</div>
-              <div class="body-text project-card-text">In Sovereign, the protagonist has been trapped within a virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.</div>
-			  <div class="body-text project-card-text">Team: Peter Smith, Jaren Urey</div>
-			  <div class="body-text project-card-text">Project Length: +15 months</div>
-			  <div class="body-text project-card-text">Engine: Unreal</div>
+              <div class="subheader-text project-title">Rogue Mage</div>
+				 <div class="body-text project-card-text">Role: Developer</div>
+              <div class="body-text project-card-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
+			  <div class="body-text project-card-text">Team: Damien Meadows, Logan Moyers, Jaren Urey, Christian Dall</div>
+			  <div class="body-text project-card-text">Project Length: 1 month</div>
+			  <div class="body-text project-card-text">Engine: Unity</div>
             </div>
             <a class="button" href="./project-pages/Sovereign-project.html">
               <span class="button-text">Read More</span>
