--- a/project-pages/RogueMage-project.html
+++ b/project-pages/RogueMage-project.html
@@ -25,8 +25,8 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/1311.png" />
-     <title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+     <title>Rogue Mage</title>
+    <meta name="description" content="Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
@@ -44,13 +44,13 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Jaren Urey - Rogue Mage</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
           (this should be the same across all pages)
         -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:ureyjaren@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -68,8 +68,8 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="main-title">Rogue Mage</div>
+        <div class="body-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
 
@@ -83,9 +83,9 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
-        </div>
+          <div class="body-text">This project was made for one of my portfolio classes during university. My role in the project was developing the core player features, as well as designing the combat system around the four different mage classes that the player can choose from.</div>
+          <div class="body-text">The core combat system is the four classes that the player can choose from: fire, water, earth, and air. Each giving the player different attacks and stats. It was very fun coming up with different design philosophies for each one. All of the fire mage's attacks could fire off very rapidly but would consume vast amounts of mana. The Earth mage was slow but every one of their attacks had a huge area of effect. The water mage had to be very precise, with very hard hitting attacks that were hard to hit. The air mage being the quickest but all of their attacks had a very short range.</div>
+		</div>
       </div>
 
       <!-- IMAGE GALLERY -->
