--- a/project-pages/Sovereign-project.html
+++ b/project-pages/Sovereign-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Sovereign</div>
         <div class="body-text">Sovereign is a third-person adventure melee shooter, where the Protagonist has been trapped within a Virtual reality of his own subconscious. With no memory of who or where he is, he must defeat the forces that have taken control of his psyche and take back control of his mind.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/SOV-landscape.png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -120,7 +120,7 @@
                   - IMAGE_CAPTION: to the caption of the image
             -->
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
+              <img src="../assets/images/SOV-spawn.png" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
             <div class="gallery-image-container half-width">
