--- a/project-pages/ChatServer-project.html
+++ b/project-pages/ChatServer-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Chat Server Prototype</div>
         <div class="body-text">A simple chat server prototype that could send and receive messages via a TCP connection.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/chat-serverpic.png">
       </div>
 
       <!-- PROJECT DETAILS -->
