--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/chat-spaghetti" class="project-image">
+            <img src="./assets/images/chat-spaghetti.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Chat Server Prototype</div>
 			  <div class="body-text project-card-text">Role: Sole Developer</div>
