--- a/project-pages/Sovereign-project.html
+++ b/project-pages/Sovereign-project.html
@@ -121,15 +121,15 @@
             -->
             <div class="gallery-image-container half-width">
               <img src="../assets/images/SOV-spawn.png" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">Spawn area for feature testing.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/SOV-AiDesign.png" class="gallery-image">
+              <span class="image-caption">Behavior design for enemy AI.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/SOV-blueprint.png" class="gallery-image">
+              <span class="image-caption">Snipit of player blueprint.</span>
             </div>
         </div>
       </div>
