--- a/project-pages/ChatServer-project.html
+++ b/project-pages/ChatServer-project.html
@@ -127,16 +127,12 @@
                   - IMAGE_CAPTION: to the caption of the image
             -->
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/chat-text.png" class="gallery-image">
+              <span class="image-caption">Server and client text communication.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/chat-code.png" class="gallery-image">
+              <span class="image-caption">Snipit of server code.</span>
             </div>
         </div>
       </div>
