--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             </a>
           </div>
 		  <div class="project-card">
-            <img src="./assets/images/code.jpeg" class="project-image">
+            <img src="./assets/images/Rogue Mages Logo.png" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Rogue Mage</div>
+              <div class="subheader-text project-title">Rogue Mages</div>
 				 <div class="body-text project-card-text">Role: Developer</div>
               <div class="body-text project-card-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
 			  <div class="body-text project-card-text">Team: Damien Meadows, Logan Moyers, Jaren Urey, Christian Dall</div>
