Change title and references from 'Rogue Mage' to 'Rogue Mages'

--- a/project-pages/RogueMage-project.html
+++ b/project-pages/RogueMage-project.html
@@ -25,7 +25,7 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/1311.png" />
-     <title>Rogue Mage</title>
+     <title>Rogue Mages</title>
     <meta name="description" content="Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -44,7 +44,7 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Jaren Urey - Rogue Mage</span>
+        <span class="nav-title">Jaren Urey - Rogue Mages</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
@@ -68,7 +68,7 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Rogue Mage</div>
+        <div class="main-title">Rogue Mages</div>
         <div class="body-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
