--- a/project-pages/RogueMage-project.html
+++ b/project-pages/RogueMage-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Rogue Mages</div>
         <div class="body-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/roguemages-mages">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -84,7 +84,7 @@
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
           <div class="body-text">This project was made for one of my portfolio classes during university. My role in the project was developing the core player features, as well as designing the combat system around the four different mage classes that the player can choose from.</div>
-          <div class="body-text">The core combat system is the four classes that the player can choose from: fire, water, earth, and air. Each giving the player different attacks and stats. It was very fun coming up with different design philosophies for each one. All of the fire mage's attacks could fire off very rapidly but would consume vast amounts of mana. The Earth mage was slow but every one of their attacks had a huge area of effect. The water mage had to be very precise, with very hard hitting attacks that were hard to hit. The air mage being the quickest but all of their attacks had a very short range.</div>
+          <div class="body-text">The core combat system is the four classes that the player can choose from: fire, water, earth, and lightning. Each giving the player different attacks and stats. It was very fun coming up with different design philosophies for each one. All of the fire mage's attacks could fire off very rapidly but would consume vast amounts of mana. The Earth mage was slow but every one of their attacks had a huge area of effect. The water mage had to be very precise, with very hard hitting attacks that were hard to hit. The lightning mage being the quickest but all of their attacks had a very short range.</div>
 		</div>
       </div>
 
@@ -116,17 +116,13 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/RogueMages-gif.gif" class="gallery-image">
+              <span class="image-caption">Earth mage special attack.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/RogueMages-enemies" class="gallery-image">
+              <span class="image-caption">Enemy showcase.</span>
             </div>
         </div>
       </div>
