--- a/project-pages/RogueMage-project.html
+++ b/project-pages/RogueMage-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Rogue Mages</div>
         <div class="body-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
-        <image class="project-header-image" src="../assets/images/roguemages-mages">
+        <image class="project-header-image" src="../assets/images/roguemages-mages,png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -121,7 +121,7 @@
               <span class="image-caption">Earth mage special attack.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/RogueMages-enemies" class="gallery-image">
+              <img src="../assets/images/RogueMages-enemies.png" class="gallery-image">
               <span class="image-caption">Enemy showcase.</span>
             </div>
         </div>
