Fix image source filename in RogueMage-project.html

--- a/project-pages/RogueMage-project.html
+++ b/project-pages/RogueMage-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Rogue Mages</div>
         <div class="body-text">Venture down into the dungeon as one of four elemental mages. Will you make it to its deepest depths and defeat the boss?</div>
-        <image class="project-header-image" src="../assets/images/roguemages-mages,png">
+        <image class="project-header-image" src="../assets/images/roguemages-mages.png">
       </div>
 
       <!-- PROJECT DETAILS -->
