--- a/project-pages/NRFTW-project.html
+++ b/project-pages/NRFTW-project.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">No Rest For The Wicked</div>
         <div class="body-text">No Rest For The Wicked is an action strategy game where the player takes control of a ghost defending his abode from a bunch of ghost hunters. Being a ghost, the player cannot physically interact with the enemies, but instead use spiritual powers to interact with the environment to dispatch them.</div>
-        <image class="project-header-image" src="../assets/images/NRFTW-interact">
+        <image class="project-header-image" src="../assets/images/NRFTW-interact.gif">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -122,7 +122,7 @@
               <span class="image-caption">Player is able to temporarily possess enemies, using their weapons against other enemies.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/NRFTW-scan.png" class="gallery-image">
+              <img src="../assets/images/NRWTW-scan.png" class="gallery-image">
               <span class="image-caption">Scan feature to identify interactible objects and enemy positions.</span>
             </div>
         </div>
